[package]
name = "rs_project"
version = "0.1.0"
authors = ["jpadkins"]
edition = "2018"

[dependencies]
ron = "0.5"
rand = "0.6"
serde = "1.0"
slog = "2.5.0"
specs = "0.15"
slog-term = "2.4"
slog-async = "2.3"
fps_counter = "1.0"
#hyphenation = "0.7"
lazy_static = "1.3"
specs-derive = "0.4"

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["image", "mixer", "ttf"]

#[dependencies.textwrap]
#version = "0.11"
#features = ["hyphenation"]
